services/personal-app/overlays/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-app
  namespace: prof-test-apps
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: default-blog-api-cors@kubernetescrd
spec:
  tls:
    - hosts:
        - api-personal.test.prof-stankin.ru
      secretName: personal-app-tls
  rules:
    - host: api-personal.test.prof-stankin.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: personal-app
                port:
                  number: 80
